# QuickHash

./: CMakeLists.txt  QuickHasher.sln  README.md
QuickHash/: QuickHasher.vcxproj  QuickHasher.vcxproj.filters  main.cpp  utils.cpp  utils.h
QuickHash/Crypto/: crypto_manager.cpp  crypto_manager.h  md5.c  sha1.c  sha1.cpp  sha1.h  sha256.c  sha256.h  sha512.c  sha512.h
